added more tests; fixed issues